# sdif

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  generate_stats.py
src/: main.rs  web.rs
static/: index.html
